<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/rootAddCardDialog"
              android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="vertical">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/enter_below_info"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="@dimen/_13sdp"
                    android:id="@+id/bankName_addCard"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_bank_name"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="16"
                    android:id="@+id/bankAcc_addCard"
                    android:textSize="@dimen/_13sdp"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_bank_acc"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="@dimen/_13sdp"
                    android:paddingLeft="@dimen/_6sdp"
                    android:id="@+id/ifscCode_addCard"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_ifsc_code"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="@dimen/_13sdp"
                    android:id="@+id/bankAddress_addCard"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_bank_address"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="@dimen/_13sdp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:id="@+id/phNo_addCard"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_ph_no"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="@dimen/_13sdp"
                    android:paddingLeft="@dimen/_6sdp"
                    android:id="@+id/upiNo_addCard"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_upi_no"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_grey_corners">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="@dimen/_13sdp"
                    android:id="@+id/enterDate_addCard"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:singleLine="true"
                    android:hint="@string/enter_date"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:id="@+id/submit_addCard"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_circled_theme_full">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp"
                    android:singleLine="true"
                    android:text="@string/submit"/>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>