<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/rootAddEnquire"
              tools:context=".ui.activities.home.addProduct.AddProduct">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_16sdp"
                android:orientation="vertical">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/enter_below_info"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@drawable/rounded_black_corners">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:background="@null"
                        android:id="@+id/vendorEmail_addEnquire"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginLeft="@dimen/_6sdp"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:singleLine="true"
                        android:hint="@string/vendor_email"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@drawable/rounded_black_corners">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:inputType="textCapWords"
                        android:id="@+id/msg_addEnquire"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginLeft="@dimen/_6sdp"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:singleLine="true"
                        android:hint="@string/messages"/>
            </LinearLayout>



            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:id="@+id/submit_addEnquire"
                    android:background="@drawable/rounded_circled_theme_full">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_6sdp"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:singleLine="true"
                        android:text="@string/submit"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>