<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rootOtp"
                android:background="@color/colortheme"
                tools:context=".ui.activities.login.loginFrag.Login">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:text="@string/login"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">
            <View
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="4dp"
                    android:background="@drawable/round_white_full"></View>


            <View
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="5dp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:background="@drawable/round_white_full"></View>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_26sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/enter_mobile_number"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_white_corners">

            <RelativeLayout
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/device"/>
            </RelativeLayout>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"></View>


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91-"
                        android:textSize="@dimen/_13sdp"
                        android:paddingLeft="@dimen/_6sdp"
                        android:visibility="gone"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/txt_countrycode_login"
                        android:layout_centerVertical="true"/>


                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/mobile"
                        android:paddingLeft="@dimen/_6sdp"
                        android:id="@+id/edt_mobile_login"
                        android:layout_toRightOf="@+id/txt_countrycode_login"
                        android:gravity="center_vertical"
                        android:layout_marginRight="@dimen/_40sdp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="@dimen/_13sdp"
                        android:background="@null"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:inputType="number"
                        android:layout_gravity="center_vertical"/>

                <RelativeLayout
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_cross_login"
                        android:visibility="gone"
                        android:layout_alignParentRight="true">
                    <ImageView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/close"/>
                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:id="@+id/send_otp_login"
                android:visibility="gone"
                android:background="@drawable/rounded_circle_corners_white">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@color/colorWhite"
                      android:textSize="@dimen/_16sdp"
                      android:layout_centerInParent="true"
                      android:text="@string/send_otp"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_16sdp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/dont_have_account"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/signup_login"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/signup"/>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>